# pulse-live

./: .gitignore  API_CONTRACT.md  CONFUSION_MATRIX_MANUAL_CALC.md  LICENSE  Makefile  README.md  casme2_full_inference_results.csv  docker-compose.yml  formatted-annotations.xlsx  formatted-time-series-annotations.xlsx  generate_apex_visual.py  main.py  module.py  pyproject.toml
combinations-notebooks/: 0101-onset-apex-offset-cnn-spasial-temporal.ipynb  0102-onset-apex-offset-cnn-lstm-mlp.ipynb  0103-onset-apex-offset-cnn-bi-lstm.ipynb  0104-onset-apex-offset-cnn-bi-lstm-mlp.ipynb  0105-onset-apex-offset-cnn-bi-lstm-mha.ipynb  0106-onset-apex-offset-tcn.ipynb  0107-onset-apex-offset-cnn-transformer.ipynb  0201-onset-apex-cnn-spasial-temporal.ipynb  0202-onset-apex-cnn-lstm-mlp.ipynb  0203-onset-apex-cnn-bi-lstm.ipynb  0204-onset-apex-cnn-bi-lstm-mlp.ipynb  0205-onset-apex-cnn-bi-lstm-mha.ipynb  0206-onset-apex-tcn.ipynb  0207-onset-apex-cnn-transformer.ipynb  0301-onset-apex-offset-behavior-cnn-spasial-temporal.ipynb  0302-onset-apex-offset-behavior-lstm-mlp.ipynb  0303-onset-apex-offset-behavior-cnn-bi-lstm.ipynb  0304-onset-apex-offset-behavior-cnn-bi-lstm-mlp.ipynb  0305-onset-apex-offset-behavior-cnn-bi-lstm-mha.ipynb  0306-onset-apex-offset-behavior-tcn.ipynb  0307-onset-apex-offset-behavior-cnn-transformer.ipynb  0401-onset-apex-behavior-cnn-spasial-temporal.ipynb  0402-onset-apex-behavior-cnn-lstm-mlp.ipynb  0403-onset-apex-behavior-cnn-bi-lstm.ipynb  0404-onset-apex-behavior-cnn-bi-lstm-mlp.ipynb  0405-onset-apex-behavior-cnn-bi-lstm-mha.ipynb  0406-onset-apex-behavior-tcn.ipynb  0407-onset-apex-behavior-cnn-transformer copy.ipynb  0407-onset-apex-behavior-cnn-transformer.ipynb  0500-roi-ablation.ipynb  0600-feature-audit.ipynb  0601-window-level-cnn-transformer.ipynb  0602-research-investigation-plan.ipynb  casme2-real-time-performance.ipynb  compare-input-0407-vs-production-aaisyah-q1.ipynb  feature_analysis_0407.ipynb  model-performance-comparison.ipynb  model-real-time-performance.ipynb  run.sh
docs/: API_CONTRACT.md  BUILD_MEDIAPIPE_GPU.md  CONFUSION_MATRIX_MANUAL_CALC.md  CUTOFF_RATIO_CASME_II.md  LOGS_DOC.md  VIDEO_UPLOAD.md  logs-api.md
logs/: detection_004f8db678ae43e69db9dd0c73bff73d.json  detection_01059ec5ddb7475bb818e4602a73529c.json  detection_0292444652784172bb96fe97a549ec12.json  detection_031e906070f04da1a544621d146fa1b1.json  detection_0322156e8415497b80f7cd9824c75f91.json  detection_038bacde7e8a4b9f84d5c69b2e84ef66.json  detection_03c0e054b4cc415d9725e2a447e2ae39.json  (+196 more)
notebooks/: check-cuda.ipynb  (+9 more)
(+2395 files in other folders)
