[project]
name = "pulse-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cupy-cuda13x>=13.6.0",
  "ipykernel>=7.1.0",
  "mediapipe>=0.10.32",
  "numpy>=2.2.6",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
