[project]
name = "pulse-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cupy-cuda12x>=13.6.0",
  "ipykernel>=7.1.0",
  "mediapipe>=0.10.32",
  "numpy>=2.2.6",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "scikit-learn>=1.7.2",
  "scipy>=1.15.3",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "tqdm>=4.67.3",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
