[project]
name = "pulse-live"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "cupy-cuda12x>=13.6.0",
  "fastapi>=0.135.1",
  "ipykernel>=7.1.0",
  "mediapipe==0.10.15",
  "numpy==1.26.4",
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "scikit-learn>=1.7.2",
  "scipy>=1.15.3",
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "tqdm>=4.67.3",
  "uvicorn>=0.42.0",
  "websockets>=16.0",
  "aiortc>=1.9.0",
  "av>=12.0.0",
  "seaborn>=0.13.2",
  "ipywidgets>=8.1.8",
  "minio>=7.2.20",
  "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
mediapipe = { path = "packages/mediapipe-0.10.15-cp312-cp312-linux_x86_64.whl" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
